# ResearchBook

./: .env  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  rrequirements.txt
ReasearchBookEnv/: pyvenv.cfg
ReasearchBookEnv/Scripts/: activate  activate.bat
app/: brief_generator.py  chalmers_odr_crawler.py  crawler.py  google_scholar_crawler.py  graph_builder.py  relation_analyzer.py  ui.py
tests/: test_graph.py
typings/serpapi/: __init__.pyi  apple_app_store_search.pyi  baidu_search.pyi  bing_search.pyi  constant.pyi  duck_duck_go_search.pyi  ebay_search.pyi  google_scholar_search.pyi  google_search.pyi  home_depot_search.pyi  naver_search.pyi  pagination.pyi  serp_api_client.pyi  serp_api_client_exception.pyi  walmart_search.pyi  yahoo_search.pyi  yandex_search.pyi  youtube_search.pyi
